; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_transfer.c_usb_request_callback.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_transfer.c_usb_request_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_xfer = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@USB_MODE_DEVICE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_xfer*, i32)* @usb_request_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usb_request_callback(%struct.usb_xfer* %0, i32 %1) #0 {
  %3 = alloca %struct.usb_xfer*, align 8
  %4 = alloca i32, align 4
  store %struct.usb_xfer* %0, %struct.usb_xfer** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.usb_xfer*, %struct.usb_xfer** %3, align 8
  %6 = getelementptr inbounds %struct.usb_xfer, %struct.usb_xfer* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @USB_MODE_DEVICE, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.usb_xfer*, %struct.usb_xfer** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @usb_handle_request_callback(%struct.usb_xfer* %12, i32 %13)
  br label %19

15:                                               ; preds = %2
  %16 = load %struct.usb_xfer*, %struct.usb_xfer** %3, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @usbd_do_request_callback(%struct.usb_xfer* %16, i32 %17)
  br label %19

19:                                               ; preds = %15, %11
  ret void
}

declare dso_local i32 @usb_handle_request_callback(%struct.usb_xfer*, i32) #1

declare dso_local i32 @usbd_do_request_callback(%struct.usb_xfer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
